--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap"
     rel="stylesheet">
 <!-- fontawesome -->
-    <link rel="stylesheet" href="./fontawesome-free-5.15.1-web/css/all.css">
-    <script defer src="./fontawesome-free-5.15.1-web/js/all.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+  integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
 </head>
 
 <body>
